@@ -13,20 +13,22 @@
 
 package org.eclipse.jetty.tests.distribution;
 
-import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
 import java.net.URI;
-import java.nio.charset.StandardCharsets;
+import java.net.http.WebSocket;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Queue;
 import java.util.UUID;
+import java.util.concurrent.CompletionStage;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jetty.client.HttpClient;
@@ -40,10 +42,9 @@ import org.eclipse.jetty.http2.client.transport.HttpClientTransportOverHTTP2;
 import org.eclipse.jetty.http3.client.HTTP3Client;
 import org.eclipse.jetty.http3.client.transport.HttpClientTransportOverHTTP3;
 import org.eclipse.jetty.io.ClientConnector;
-import org.eclipse.jetty.toolchain.test.PathAssert;
-import org.eclipse.jetty.util.IO;
+import org.eclipse.jetty.toolchain.test.PathMatchers;
+import org.eclipse.jetty.util.BlockingArrayQueue;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.DisabledIfSystemProperty;
@@ -105,19 +106,15 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String mods = "resources,server,http," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("servlet", env) + "," +
-            toEnvironment("quickstart", env);
-
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "server", "http",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("servlet", env),
+            toEnvironment("quickstart", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -156,32 +153,26 @@ public class DistributionTests extends AbstractJettyHomeTest
     @ValueSource(strings = {"ee9", "ee10"})
     public void testSimpleWebAppWithJSPandJSTL(String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String mods = "resources,server,http,jmx," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("glassfish-jstl", env);
-
-        String[] args1 = {
-            "--create-start-ini",
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "server", "http", "jmx",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("glassfish-jstl", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--create-start-ini", "--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             // Verify that --create-start-ini works
-            assertTrue(Files.exists(jettyBase.resolve("start.ini")));
+            assertTrue(Files.exists(distribution.getJettyBase().resolve("start.ini")));
 
             File war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
@@ -200,26 +191,27 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO runtime can't find org.objectweb.asm on module path?
     @ParameterizedTest
-    @ValueSource(strings = {"ee9", "ee10"})
+    @ValueSource(strings = {"ee10"})
     public void testSimpleWebAppWithJSPOnModulePath(String env) throws Exception
     {
+        // Testing with env=ee9 is not possible because jakarta.transaction:1.x
+        // does not have a proper module-info.java, so JPMS resolution will fail.
+        // For env=ee10, jakarta.transaction:2.x has a proper module-info.java.
+
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String mods = "resources,server,http,jmx," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env);
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "server", "http", "jmx",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -228,11 +220,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             distribution.installWarFile(war, "test");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "--jpms",
-                "jetty.http.port=" + port
-            };
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("--jpms", "jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
@@ -267,10 +255,12 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--add-modules=" + toEnvironment("apache-jsp", env) + "," + toEnvironment("deploy", env)  + (ssl ? ",http2,test-keystore" : ",http2c")
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            (ssl ? "http2,test-keystore" : "http2c"),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -296,35 +286,28 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    //TODO test shows stacktrace but works anyway?
     @ParameterizedTest
     @ValueSource(strings = {"ee9", "ee10"})
     public void testLog4j2ModuleWithSimpleWebAppWithJSP(String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String mods = "resources,server,http,logging-log4j2," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("servlet", env);
-
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "server", "http", "logging-log4j2",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("servlet", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
-            assertTrue(Files.exists(jettyBase.resolve("resources/log4j2.xml")));
+            assertTrue(Files.exists(distribution.getJettyBase().resolve("resources/log4j2.xml")));
 
             File war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
@@ -339,44 +322,32 @@ public class DistributionTests extends AbstractJettyHomeTest
                 assertEquals(HttpStatus.OK_200, response.getStatus());
                 assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
-                assertTrue(Files.exists(jettyBase.resolve("resources/log4j2.xml")));
+                assertTrue(Files.exists(distribution.getJettyBase().resolve("resources/log4j2.xml")));
             }
-        }
-        finally
-        {
-            IO.delete(jettyBase.toFile());
         }
     }
 
-    @Disabled //TODO websocket modules broken
     @ParameterizedTest
-    // @CsvSource({"http,ee10", "http,ee9", "https,ee9", "https,ee10"})
-    @CsvSource({"http,ee10", "https,ee10"})
+    @CsvSource({"http,ee9", "https,ee9", "http,ee10", "https,ee10"})
     public void testWebsocketClientInWebappProvidedByServer(String scheme, String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String module = "https".equals(scheme) ? "test-keystore," + scheme : scheme;
-
-        String mods = "resources,server,jmx,websocket," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("websocket-jetty-client", env) + "," +
-            module;
-
-        String[] args1 = {
-            "--create-startd",
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-            };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        boolean ssl = "https".equals(scheme);
+        String mods = String.join(",",
+            "resources", "server", "jmx",
+            ssl ? "https,test-keystore" : "http",
+            toEnvironment("webapp", env),
+            toEnvironment("websocket-jakarta", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("websocket-jetty-client", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -385,18 +356,12 @@ public class DistributionTests extends AbstractJettyHomeTest
             distribution.installWarFile(webApp, "test");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "jetty.http.port=" + port,
-                "jetty.ssl.port=" + port,
-                // "jetty.server.dumpAfterStart=true",
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start(ssl ? "jetty.ssl.port=" + port : "jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
                 // We should get the correct configuration from the jetty-websocket-httpclient.xml file.
-                startHttpClient(scheme.equals("https"));
+                startHttpClient(ssl);
                 URI serverUri = URI.create(scheme + "://localhost:" + port + "/test");
                 ContentResponse response = client.GET(serverUri);
                 assertEquals(HttpStatus.OK_200, response.getStatus());
@@ -407,33 +372,26 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO websocket modules broken
     @ParameterizedTest
-    // @CsvSource({"http,ee10", "http,ee9", "https,ee9", "https,ee10"})
-    @CsvSource({"http,ee10", "https,ee10"})
+    @CsvSource({"http,ee9", "https,ee9", "http,ee10", "https,ee10"})
     public void testWebsocketClientInWebapp(String scheme, String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String module = "https".equals(scheme) ? "test-keystore," + scheme : scheme;
-
-        String mods = "resources,server,jmx,websocket," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            module;
-        String[] args1 = {
-            "--create-startd",
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        boolean ssl = "https".equals(scheme);
+        String mods = String.join(",",
+            "resources", "server", "jmx",
+            ssl ? "https,test-keystore" : "http",
+            toEnvironment("webapp", env),
+            toEnvironment("websocket-jakarta", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -442,13 +400,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             distribution.installWarFile(webApp, "test");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "jetty.http.port=" + port,
-                "jetty.ssl.port=" + port,
-                // "jetty.server.dumpAfterStart=true",
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start(ssl ? "jetty.ssl.port=" + port : "jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
@@ -476,11 +428,9 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
+        String downloadURI = "https://repo1.maven.org/maven2/org/eclipse/jetty/maven-metadata.xml";
         String outPath = "etc/maven-metadata.xml";
-        String[] args1 = {
-            "--download=https://repo1.maven.org/maven2/org/eclipse/jetty/maven-metadata.xml|" + outPath
-        };
-        try (JettyHomeTester.Run run = distribution.start(args1))
+        try (JettyHomeTester.Run run = distribution.start("--download=" + downloadURI + "|" + outPath))
         {
             assertTrue(run.awaitConsoleLogsFor("Base directory was modified", 110, TimeUnit.SECONDS));
             Path target = jettyBase.resolve(outPath);
@@ -488,10 +438,8 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO ee9 proxy demo not built
     @ParameterizedTest
-    //@ValueSource(strings = {"ee9", "ee10"})
-    @ValueSource(strings = {"ee10"})
+    @ValueSource(strings = {"ee9", "ee10"})
     public void testWebAppWithProxyAndJPMS(String env) throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
@@ -500,19 +448,15 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--add-modules=http,resources," + toEnvironment("webapp", env) + "," + toEnvironment("deploy", env)
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "http",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
-
-            Path logFile = distribution.getJettyBase().resolve("resources").resolve("jetty-logging.properties");
-            try (BufferedWriter writer = Files.newBufferedWriter(logFile, StandardCharsets.UTF_8, StandardOpenOption.CREATE))
-            {
-                writer.write("org.eclipse.jetty.LEVEL=INFO");
-            }
 
             File war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-proxy-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "proxy");
@@ -529,125 +473,115 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    /**
-     * This reproduces some classloading issue with MethodHandles in JDK14-110, This has been fixed in JDK16.
-     *
-     * @throws Exception if there is an error during the test.
-     * @see <a href="https://bugs.openjdk.java.net/browse/JDK-8244090">JDK-8244090</a>
-     */
-    /*    @ParameterizedTest
-    @ValueSource(strings = {"", "--jpms"})
-    @DisabledOnJre({JRE.JAVA_14, JRE.JAVA_15})
-    public void testSimpleWebAppWithWebsocket(String arg) throws Exception
+    @ParameterizedTest
+    @CsvSource(value = {"ee9,false", "ee10,false", "ee10,true"})
+    public void testSimpleWebAppWithWebsocket(String env, String jpms) throws Exception
     {
+        // Testing ee9 with JPMS won't work because ee9 jakarta.* jars
+        // do not have a proper module-info.java so JPMS resolution fails.
+
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets,websocket"
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+
+        String mods = String.join(",",
+            "resources", "http", "jmx",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("websocket-jakarta", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            File webApp = distribution.resolveArtifact("org.eclipse.jetty.tests:test-websocket-webapp:war:" + jettyVersion);
+            File webApp = distribution.resolveArtifact("org.eclipse.jetty." + env + ":jetty-" + env + "-test-websocket-webapp:war:" + jettyVersion);
             distribution.installWarFile(webApp, "test1");
             distribution.installWarFile(webApp, "test2");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                arg,
-                "jetty.http.port=" + port//,
-                //"jetty.server.dumpAfterStart=true"
-            };
-
+            List<String> args2 = new ArrayList<>();
+            args2.add("jetty.http.port=" + port);
+            if (Boolean.parseBoolean(jpms))
+                args2.add("--jpms");
             try (JettyHomeTester.Run run2 = distribution.start(args2))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
-                assertFalse(run2.getLogs().stream().anyMatch(s -> s.contains("LinkageError")));
 
-                startHttpClient();
-                WebSocketClient wsClient = new WebSocketClient(client);
-                wsClient.start();
-                URI serverUri = URI.create("ws://localhost:" + port);
+                URI serverUri = URI.create("ws://localhost:" + port + "/test1/");
+                WsListener webSocketListener = new WsListener();
+                var wsBuilder = java.net.http.HttpClient.newHttpClient().newWebSocketBuilder();
+                WebSocket webSocket = wsBuilder.buildAsync(serverUri, webSocketListener).get(10, TimeUnit.SECONDS);
 
                 // Verify /test1 is able to establish a WebSocket connection.
-                WsListener webSocketListener = new WsListener();
-                Session session = wsClient.connect(webSocketListener, serverUri.resolve("/test1")).get(10, TimeUnit.SECONDS);
-                session.getRemote().sendString("echo message");
+                webSocket.sendText("echo message", true);
                 assertThat(webSocketListener.textMessages.poll(10, TimeUnit.SECONDS), is("echo message"));
-                session.close();
+                webSocket.sendClose(WebSocket.NORMAL_CLOSURE, "");
                 assertTrue(webSocketListener.closeLatch.await(10, TimeUnit.SECONDS));
-                assertThat(webSocketListener.closeCode, is(StatusCode.NORMAL));
+                assertThat(webSocketListener.closeCode, is(WebSocket.NORMAL_CLOSURE));
 
                 // Verify /test2 is able to establish a WebSocket connection.
+                serverUri = URI.create("ws://localhost:" + port + "/test2/");
                 webSocketListener = new WsListener();
-                session = wsClient.connect(webSocketListener, serverUri.resolve("/test2")).get(10, TimeUnit.SECONDS);
-                session.getRemote().sendString("echo message");
+                webSocket = wsBuilder.buildAsync(serverUri, webSocketListener).get(10, TimeUnit.SECONDS);
+                webSocket.sendText("echo message", true);
                 assertThat(webSocketListener.textMessages.poll(10, TimeUnit.SECONDS), is("echo message"));
-                session.close();
+                webSocket.sendClose(WebSocket.NORMAL_CLOSURE, "");
                 assertTrue(webSocketListener.closeLatch.await(10, TimeUnit.SECONDS));
-                assertThat(webSocketListener.closeCode, is(StatusCode.NORMAL));
+                assertThat(webSocketListener.closeCode, is(WebSocket.NORMAL_CLOSURE));
             }
         }
     }
 
-    public static class WsListener implements WebSocketListener
+    public static class WsListener implements WebSocket.Listener
     {
         public BlockingArrayQueue<String> textMessages = new BlockingArrayQueue<>();
         public final CountDownLatch closeLatch = new CountDownLatch(1);
         public int closeCode;
 
         @Override
-        public void onWebSocketClose(int statusCode, String reason)
+        public CompletionStage<?> onText(WebSocket webSocket, CharSequence data, boolean last)
         {
-            this.closeCode = statusCode;
-            closeLatch.countDown();
+            textMessages.add(data.toString());
+            webSocket.request(1);
+            return null;
         }
 
         @Override
-        public void onWebSocketText(String message)
+        public CompletionStage<?> onClose(WebSocket webSocket, int statusCode, String reason)
         {
-            textMessages.add(message);
+            closeCode = statusCode;
+            closeLatch.countDown();
+            return null;
         }
-    }*/
+    }
 
-    //TODO exception in test but still works?
     @Test
     public void testStartStopLog4j2Modules() throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
-
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-log4j2"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-log4j2"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             Files.copy(Paths.get("src/test/resources/log4j2.xml"),
-                Paths.get(jettyBase.toString(), "resources").resolve("log4j2.xml"),
+                distribution.getJettyBase().resolve("resources").resolve("log4j2.xml"),
                 StandardCopyOption.REPLACE_EXISTING);
 
             int port = distribution.freePort();
             try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitLogsFileFor(
-                    jettyBase.resolve("logs").resolve("jetty.log"),
+                    distribution.getJettyBase().resolve("logs").resolve("jetty.log"),
                     "Started oejs.Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient();
@@ -669,12 +603,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-jul"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-jul"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -708,12 +637,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-jul-capture"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-jul-capture"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -765,7 +689,6 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO correct xml syntax
     @Test
     public void testBeforeDirectiveInModule() throws Exception
     {
@@ -775,11 +698,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--add-modules=https,test-keystore"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=https,test-keystore"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -789,52 +708,50 @@ public class DistributionTests extends AbstractJettyHomeTest
             Path jettyBaseEtc = jettyBase.resolve("etc");
             Files.createDirectories(jettyBaseEtc);
             Path sslPatchXML = jettyBaseEtc.resolve("ssl-patch.xml");
-            String nextProtocol = "fcgi/1.0";
-            String xml = "" +
-                "<?xml version=\"1.0\"?>" +
-                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://www.eclipse.org/jetty/configure_10_0.dtd\">" +
-                "<Configure id=\"sslConnector\" class=\"org.eclipse.jetty.server.ServerConnector\">" +
-                "  <Call name=\"addIfAbsentConnectionFactory\">" +
-                "    <Arg>" +
-                "      <New class=\"org.eclipse.jetty.server.SslConnectionFactory\">" +
-                "        <Arg name=\"next\">" + nextProtocol + "</Arg>" +
-                "        <Arg name=\"sslContextFactory\"><Ref refid=\"sslContextFactory\"/></Arg>" +
-                "      </New>" +
-                "    </Arg>" +
-                "  </Call>" +
-                "  <Call name=\"addConnectionFactory\">" +
-                "    <Arg>" +
-                "      <New class=\"org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory\">" +
-                "        <Arg><Ref refid=\"sslHttpConfig\" /></Arg>" +
-                "      </New>" +
-                "    </Arg>" +
-                "  </Call>" +
-                "</Configure>";
+            String xml = """
+                <?xml version="1.0"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://www.eclipse.org/jetty/configure_10_0.dtd">
+                <Configure id="sslConnector" class="org.eclipse.jetty.server.ServerConnector">
+                  <Call name="addIfAbsentConnectionFactory">
+                    <Arg>
+                      <New class="org.eclipse.jetty.server.SslConnectionFactory">
+                        <Arg name="next">fcgi/1.0</Arg>
+                        <Arg name="sslContextFactory"><Ref refid="sslContextFactory"/></Arg>
+                      </New>
+                    </Arg>
+                  </Call>
+                  <Call name="addConnectionFactory">
+                    <Arg>
+                      <New class="org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory">
+                        <Arg><Ref refid="sslHttpConfig" /></Arg>
+                      </New>
+                    </Arg>
+                  </Call>
+                </Configure>
+                """;
             Files.write(sslPatchXML, List.of(xml), StandardOpenOption.CREATE);
 
             Path jettyBaseModules = jettyBase.resolve("modules");
             Files.createDirectories(jettyBaseModules);
             Path sslPatchModule = jettyBaseModules.resolve("ssl-patch.mod");
-            String module = "" +
-                "[depends]\n" +
-                "fcgi\n" +
-                "\n" +
-                "[before]\n" +
-                "https\n" +
-                "http2\n" + // http2 is not explicitly enabled.
-                "\n" +
-                "[after]\n" +
-                "ssl\n" +
-                "\n" +
-                "[xml]\n" +
-                "etc/ssl-patch.xml\n";
+            // http2 is not explicitly enabled.
+            String module = """
+                [depends]
+                fcgi
+
+                [before]
+                https
+                http2
+
+                [after]
+                ssl
+
+                [xml]
+                etc/ssl-patch.xml
+                """;
             Files.write(sslPatchModule, List.of(module), StandardOpenOption.CREATE);
 
-            String[] args2 = {
-                "--add-modules=ssl-patch"
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("--add-modules=ssl-patch"))
             {
                 assertTrue(run2.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
                 assertEquals(0, run2.getExitValue());
@@ -866,12 +783,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=logging-logback,http"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution1.start(args1))
+        try (JettyHomeTester.Run run1 = distribution1.start("--approve-all-licenses", "--add-modules=logging-logback,http"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -889,12 +801,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .build();
 
         // Try the modules in reverse order, since it may execute a different code path.
-        String[] args2 = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-logback"
-        };
-
-        try (JettyHomeTester.Run run2 = distribution2.start(args2))
+        try (JettyHomeTester.Run run2 = distribution2.start("--approve-all-licenses", "--add-modules=http,logging-logback"))
         {
             assertTrue(run2.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run2.getExitValue());
@@ -995,7 +902,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             "[ini]\n" +
             "" + pathProperty + "=modbased\n";
         String moduleName = "ssl-ini";
-        Files.write(jettyBaseModules.resolve(moduleName + ".mod"), module.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE);
+        Files.writeString(jettyBaseModules.resolve(moduleName + ".mod"), module, StandardOpenOption.CREATE);
 
         try (JettyHomeTester.Run run1 = distribution.start("--add-module=https,test-keystore,ssl-ini"))
         {
@@ -1006,8 +913,8 @@ public class DistributionTests extends AbstractJettyHomeTest
             try (JettyHomeTester.Run run2 = distribution.start(pathProperty + "=cmdline"))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 5, TimeUnit.SECONDS));
-                PathAssert.assertFileExists("${jetty.base}/cmdline", jettyBase.resolve("cmdline"));
-                PathAssert.assertNotPathExists("${jetty.base}/modbased", jettyBase.resolve("modbased"));
+                assertThat("${jetty.base}/cmdline", jettyBase.resolve("cmdline"), PathMatchers.isRegularFile());
+                assertThat("${jetty.base}/modbased", jettyBase.resolve("modbased"), not(PathMatchers.exists()));
             }
         }
     }
@@ -1020,11 +927,8 @@ public class DistributionTests extends AbstractJettyHomeTest
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=http,well-known"
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,well-known"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -1044,12 +948,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             }
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "jetty.http.port=" + port
-                //"jetty.server.dumpAfterStart=true"
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
@@ -1150,22 +1049,18 @@ public class DistributionTests extends AbstractJettyHomeTest
     @Test
     public void testDryRunProperties() throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {"--add-to-start=server,logging-jetty"};
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start("--add-to-start=server,logging-jetty"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            String[] args2 = {"--dry-run"};
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("--dry-run"))
             {
                 run2.awaitFor(5, TimeUnit.SECONDS);
                 Queue<String> logs = run2.getLogs();
@@ -1184,8 +1079,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        List<String> args1 = List.of("--add-modules=resources,http,fcgi,fcgi-proxy,core-deploy");
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(List.of("--add-modules=resources,http,fcgi,fcgi-proxy,core-deploy")))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -1231,7 +1125,7 @@ public class DistributionTests extends AbstractJettyHomeTest
                 <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://www.eclipse.org/jetty/configure_10_0.dtd">
                 <Configure class="org.eclipse.jetty.server.handler.ContextHandler">
                   <Set name="contextPath">/php</Set>
-                  <Set name="baseResource">
+                  <Set name="baseResourceAsPath">
                     <Call class="java.nio.file.Path" name="of">
                       <Arg>$R</Arg>
                     </Call>
